more spacing fixes and other docs changes

--- a/docgen/doc/public/style.css
+++ b/docgen/doc/public/style.css
@@ -586,15 +586,11 @@ sup {
 	display: none;
 }
 
-.message + br + br {
+.message + br {
 	display: none;
 }
 
 .heading + br {
-	display: none;
-}
-
-.heading + br + br {
 	display: none;
 }
 
